force-app/main/default/objects/DependantPicklistMdata__mdt/DependantPicklistMdata__mdt.object-meta.xml
<CustomObject>
    <label>DependantPicklistMdata</label>
    <pluralLabel>DependantPicklistMdatas</pluralLabel>
</CustomObject>