force-app/main/default/objects/DependantPicklistMdata__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
                <default>true</default>
                <label>China</label>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Srilanka</fullName>
            </value>
            <value>
                <fullName>Nigeria	Nigeria</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Russia	Russia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>