force-app/main/default/objects/DependantPicklistMdata__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hangzhou</fullName>
                <default>true</default>
                <label>Hangzhou</label>
            </value>
            <value>
                <fullName>maharastra</fullName>
            </value>
            <value>
                <fullName>sindhu</fullName>
            </value>
            <value>
                <fullName>kotte</fullName>
            </value>
            <value>
                <fullName>NewYork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>